REGRESSION(r281422): PLT5 regressed by 1% overall https://bugs.webkit.org/show_bug.cgi?id=232391 <rdar://82530500>

Reviewed by Antti Koivisto.

<sub>/<sup> inline boxes with non-integral vertical values and with integral positioned child inline boxes may trigger unexpected vertical overflow.

* rendering/LegacyRootInlineBox.cpp:
(WebCore::LegacyRootInlineBox::verticalPositionForBox):



Canonical link: https://commits.webkit.org/243632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284985 268f45cc-cd09-0410-ab3c-d52691b4dbfc